--- a/Code/ZigBeeDataGathering/LogSender/LogSender.csproj
+++ b/Code/ZigBeeDataGathering/LogSender/LogSender.csproj
@@ -62,6 +62,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConsoleLogSend.cs" />
     <Compile Include="ILog.cs" />
     <Compile Include="NLogSend.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
