--- a/Code/ZigBeeDataGathering/ZigBeeDataGathering/ZigBeeDataGathering.csproj
+++ b/Code/ZigBeeDataGathering/ZigBeeDataGathering/ZigBeeDataGathering.csproj
@@ -5,4 +5,29 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Akka" Version="1.3.14" />
+    <PackageReference Include="Akka.DI.Core" Version="1.3.14" />
+    <PackageReference Include="Akka.DI.Extensions.DependencyInjection" Version="1.3.2" />
+    <PackageReference Include="Akka.Logger.NLog" Version="1.3.3" />
+    <PackageReference Include="Akka.Remote" Version="1.3.14" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\AkkaSysBase\AkkaSysBase.csproj" />
+    <ProjectReference Include="..\Core\Core.csproj" />
+    <ProjectReference Include="..\LogSender\LogSender.csproj" />
+    <ProjectReference Include="..\Model\Model.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="appsetting.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
